--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-native-toast-message",
   "version": "2.2.0",
   "description": "Toast message component for React Native",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "main": "./index.ts",
+  "types": "./types/index.ts",
   "files": [
     "/lib"
   ],
